# sudoku_bot

./: cather.py  exceptions.py  field.py  grid_formatter.py  main.py  morph_test.py  pos.py  pyproject.toml  solver.py  table.html
images/: table_test1.csv  table_test2.csv  table_test3.csv
images/test1/cells/ocr_data/: 000-000.gt.txt  000-001.gt.txt  005-005.gt.txt
images/test3/cells/ocr_data/: 006-001.gt.txt
test_tables/: table_test1.csv  table_test2.csv  table_test3.csv  table_test_evil.csv  test_table_expert.csv
